<resources>
    <string name="app_name">Samia</string>
    <string name="SamiaAlsaleh">Samia Alsaleh</string>
    <string name="Sign_In">SIGN IN</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Samia_Alsaleh">Samia_Alsaleh</string>
    <string name="FORGET_PASSWORD">FORGOT PASSWORD</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="Terms_And_Conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="about_the_brand">About The Brand</string>
    <string name="graphic_spa_saloon">Graphic Spa Saloon</string>
    <string name="updates">Updates</string>
    <string name="track_your_product">Track Your Product</string>
    <string name="feedback">Feedback</string>
    <string name="hair_care">Hair Care</string>
    <string name="body_care">Body Care</string>
    <string name="skin_care">Skin Care</string>
    <string name="shampoo">Shampoo</string>
    <string name="_continue">Continue</string>
    <string name="payments">Payments</string>
    <string name="price_details">Price Details</string>
    <string name="price_1_item">Price(1 item)</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="total">Total</string>
    <string name="valid_thru">valid thru</string>
    <string name="pay_now">Pay Now</string>
    <string name="fb">fb</string>
    <string name="insta">insta</string>
    <string name="googleplus">googleplus</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="phone_no">Phone No</string>
    <string name="wholesale_buyer">WHOLESALE BUYER</string>
    <string name="Sign_in">sign in</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="credit_debit_card">Credit / Debit Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="Continue">Continue</string>
    <string name="card_number">Card Number</string>
    <string name="qr_7">QR 7</string>
    <string name="qr_1">QR 1</string>
    <string name="qr_8">QR 8</string>
    <string name="Sign_up">sign up</string>
    <string name="buy">Buy</string>
    <string name="description">Description</string>
    <string name="xxxxxx">xxxxxx</string>
    <string name="xxxyy">xxxyy</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="itemimage">ItemImage</string>
    <string name="itemname">ItemName</string>
    <string name="itemprice">ItemPrice</string>
    <string name="qty">Qty</string>
    <string name="qwerty">qwerty</string>
    <string name="cvv">CVV</string>
    <string name="product">PRODUCT</string>
    <string name="search">Search</string>
    <string name="ic_menu">ic_menu</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="Product">Product</string>
    <string name="salon_x">SALON X</string>
    <string name="Submit">SUBMIT</string>
    <string name="salonx_logo">SalonX_logo</string>
    <string name="Sign_Up">SIGN UP</string>
    <string name="User_name">User Name</string>
    <string name="address">Address</string>
    <string name="email_id_phone_no">Email ID / Phone No</string>
    <string name="imageviewpage5">imageViewPage5</string>

</resources>
