<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page_16"
    android:background="#ffffff">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/plaintext_border"
        android:elevation="10dp"/>

    <EditText
        android:id="@+id/editTextDeliveryAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/delivery_address"
        android:textSize="14sp"
        android:inputType="textMultiLine"
        android:lines="8"
        android:gravity="start"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:background="@drawable/plaintext_border"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:elevation="10dp"/>

    <EditText
        android:id="@+id/editTextMobileNumber"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/mobile_number"
        android:textSize="14sp"
        android:inputType="phone"
        android:background="@drawable/plaintext_border"
        app:layout_constraintTop_toBottomOf="@id/editTextDeliveryAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:elevation="10dp"/>

    <RadioGroup
        android:id="@+id/radioGroupPayment"
        android:layout_width="300dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/editTextMobileNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/plaintext_border"
        android:layout_marginTop="30dp"
        android:elevation="10dp">

        <TextView
            android:id="@+id/textViewPayment"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/payments"
            android:textStyle="bold"
            android:textSize="14sp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:padding="10dp"/>

        <RadioButton
            android:id="@+id/radioButtonCOD"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/cash_on_delivery"
            android:textSize="14sp" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/Continue"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:background="@drawable/button_border"
        app:layout_constraintTop_toBottomOf="@id/radioGroupPayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:elevation="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>